test/fail/exceptions/unreachable_except.lily
#[
SyntaxError: 'except' clause is unreachable.
    from unreachable_except.lily:10:
]#

try: {
    1 / 0
except Exception:
    1
except IndexError:
    2
}
